src/Quiz/quizParser.java
// Generated from quiz.g4 by ANTLR 4.9.2

    package Quiz;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class quizParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, CORRECT=48, NUMBER=49, FLOAT=50, NAME=51, STRING=52, 
		COMMENT=53, NEWLINE=54, MULTICOMM=55, WS=56;
	public static final int
		RULE_program = 0, RULE_stat = 1, RULE_expr = 2, RULE_quiz = 3, RULE_createReport = 4, 
		RULE_add = 5, RULE_sub_question = 6, RULE_sub_groups = 7, RULE_load = 8, 
		RULE_remove = 9, RULE_defineAnswer = 10, RULE_defineMark = 11, RULE_mark = 12, 
		RULE_showGroup = 13, RULE_showOpt = 14, RULE_evaluation = 15, RULE_multichoice = 16, 
		RULE_multichoiceoption = 17, RULE_matching = 18, RULE_matchingoption = 19, 
		RULE_match = 20, RULE_import_expr = 21, RULE_plist = 22, RULE_p = 23, 
		RULE_show = 24, RULE_question = 25, RULE_ques_opt = 26, RULE_shuffle = 27, 
		RULE_getAnswer = 28, RULE_getChoice = 29, RULE_getAnswerToChoice = 30, 
		RULE_shortQuestion = 31, RULE_numeric = 32, RULE_essay = 33, RULE_option = 34, 
		RULE_optionMult = 35, RULE_finishQuiz = 36, RULE_variable = 37, RULE_title = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "stat", "expr", "quiz", "createReport", "add", "sub_question", 
			"sub_groups", "load", "remove", "defineAnswer", "defineMark", "mark", 
			"showGroup", "showOpt", "evaluation", "multichoice", "multichoiceoption", 
			"matching", "matchingoption", "match", "import_expr", "plist", "p", "show", 
			"question", "ques_opt", "shuffle", "getAnswer", "getChoice", "getAnswerToChoice", 
			"shortQuestion", "numeric", "essay", "option", "optionMult", "finishQuiz", 
			"variable", "title"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'create quiz'", "'title'", "'='", "'pass'", "'auto-corrective'", 
			"'create'", "'report'", "'add group'", "','", "'add'", "'to'", "'all'", 
			"'group'", "'load'", "'as'", "'remove'", "'from'", "'define-answer'", 
			"'define-mark'", "'if'", "'wrong'", "'show'", "'repeat'", "'times'", 
			"'discount'", "'{'", "'}'", "'evaluation'", "'multi-choice'", "'id'", 
			"'text'", "'option'", "'matching'", "'side'", "'match'", "'import'", 
			"'and'", "'with'", "'shuffle'", "'get'", "'answer'", "'choice'", "'short-question'", 
			"'numeric-question'", "'essay-question'", "'option-multi'", "'finish quiz'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"CORRECT", "NUMBER", "FLOAT", "NAME", "STRING", "COMMENT", "NEWLINE", 
			"MULTICOMM", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "quiz.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public quizParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(quizParser.EOF, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof quizListener ) ((quizListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof quizListener ) ((quizListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof quizVisitor ) return ((quizVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__5) | (1L << T__7) | (1L << T__9) | (1L << T__13) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__21) | (1L << T__27) | (1L << T__28) | (1L << T__32) | (1L << T__38) | (1L << T__39) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << NAME) | (1L << NEWLINE))) != 0)) {
				{
				{
				setState(78);
				stat();
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(84);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(quizParser.NEWLINE, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof quizListener ) ((quizListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof quizListener ) ((quizListener)listener).exitStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof quizVisitor ) return ((quizVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__5) | (1L << T__7) | (1L << T__9) | (1L << T__13) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__21) | (1L << T__27) | (1L << T__28) | (1L << T__32) | (1L << T__38) | (1L << T__39) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << NAME))) != 0)) {
				{
				{
				setState(86);
				expr();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public QuizContext quiz() {
			return getRuleContext(QuizContext.class,0);
		}
		public AddContext add() {
			return getRuleContext(AddContext.class,0);
		}
		public MultichoiceContext multichoice() {
			return getRuleContext(MultichoiceContext.class,0);
		}
		public MatchingContext matching() {
			return getRuleContext(MatchingContext.class,0);
		}
		public EvaluationContext evaluation() {
			return getRuleContext(EvaluationContext.class,0);
		}
		public RemoveContext remove() {
			return getRuleContext(RemoveContext.class,0);
		}
		public DefineAnswerContext defineAnswer() {
			return getRuleContext(DefineAnswerContext.class,0);
		}
		public ShowGroupContext showGroup() {
			return getRuleContext(ShowGroupContext.class,0);
		}
		public Import_exprContext import_expr() {
			return getRuleContext(Import_exprContext.class,0);
		}
		public ShowOptContext showOpt() {
			return getRuleContext(ShowOptContext.class,0);
		}
		public LoadContext load() {
			return getRuleContext(LoadContext.class,0);
		}
		public ShortQuestionContext shortQuestion() {
			return getRuleContext(ShortQuestionContext.class,0);
		}
		public NumericContext numeric() {
			return getRuleContext(NumericContext.class,0);
		}
		public EssayContext essay() {
			return getRuleContext(EssayContext.class,0);
		}
		public CreateReportContext createReport() {
			return getRuleContext(CreateReportContext.class,0);
		}
		public OptionContext option() {
			return getRuleContext(OptionContext.class,0);
		}
		public FinishQuizContext finishQuiz() {
			return getRuleContext(FinishQuizContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof quizListener ) ((quizListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof quizListener ) ((quizListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof quizVisitor ) return ((quizVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expr);
		try {
			setState(112);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				quiz();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				add();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(96);
				multichoice();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(97);
				matching();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(98);
				evaluation();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(99);
				remove();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(100);
				defineAnswer();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(101);
				showGroup();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(102);
				import_expr();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(103);
				showOpt();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(104);
				load();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(105);
				shortQuestion();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(106);
				numeric();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(107);
				essay();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(108);
				createReport();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(109);
				option();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(110);
				finishQuiz();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(111);
				variable();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QuizContext extends ParserRuleContext {
		public QuizContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quiz; }
	 
		public QuizContext() { }
		public void copyFrom(QuizContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CreateQuizCorrectionContext extends QuizContext {
		public List<TerminalNode> STRING() { return getTokens(quizParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(quizParser.STRING, i);
		}
		public TerminalNode NUMBER() { return getToken(quizParser.NUMBER, 0); }
		public CreateQuizCorrectionContext(QuizContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof quizListener ) ((quizListener)listener).enterCreateQuizCorrection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof quizListener ) ((quizListener)listener).exitCreateQuizCorrection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof quizVisitor ) return ((quizVisitor<? extends T>)visitor).visitCreateQuizCorrection(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CreateQuizContext extends QuizContext {
		public List<TerminalNode> STRING() { return getTokens(quizParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(quizParser.STRING, i);
		}
		public CreateQuizContext(QuizContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof quizListener ) ((quizListener)listener).enterCreateQuiz(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof quizListener ) ((quizListener)listener).exitCreateQuiz(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof quizVisitor ) return ((quizVisitor<? extends T>)visitor).visitCreateQuiz(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuizContext quiz() throws RecognitionException {
		QuizContext _localctx = new QuizContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_quiz);
		int _la;
		try {
			setState(134);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new CreateQuizContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				match(T__0);
				setState(115);
				match(T__1);
				setState(116);
				match(T__2);
				setState(117);
				match(STRING);
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__3) {
					{
					setState(118);
					match(T__3);
					setState(119);
					match(T__2);
					setState(120);
					match(STRING);
					}
				}

				}
				break;
			case 2:
				_localctx = new CreateQuizCorrectionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				match(T__0);
				setState(124);
				match(T__1);
				setState(125);
				match(T__2);
				setState(126);
				match(STRING);
				setState(127);
				match(T__4);
				setState(128);
				match(NUMBER);
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__3) {
					{
					setState(129);
					match(T__3);
					setState(130);
					match(T__2);
					setState(131);
					match(STRING);
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateReportContext extends ParserRuleContext {
		public CreateReportContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createReport; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof quizListener ) ((quizListener)listener).enterCreateReport(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof quizListener ) ((quizListener)listener).exitCreateReport(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof quizVisitor ) return ((quizVisitor<? extends T>)visitor).visitCreateReport(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateReportContext createReport() throws RecognitionException {
		CreateReportContext _localctx = new CreateReportContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_createReport);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(T__5);
			setState(137);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddContext extends ParserRuleContext {
		public AddContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_add; }
	 
		public AddContext() { }
		public void copyFrom(AddContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AddOptionContext extends AddContext {
		public TerminalNode NAME() { return getToken(quizParser.NAME, 0); }
		public Sub_questionContext sub_question() {
			return getRuleContext(Sub_questionContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(quizParser.NEWLINE, 0); }
		public AddOptionContext(AddContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof quizListener ) ((quizListener)listener).enterAddOption(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof quizListener ) ((quizListener)listener).exitAddOption(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof quizVisitor ) return ((quizVisitor<? extends T>)visitor).visitAddOption(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CreateGroupContext extends AddContext {
		public TerminalNode NAME() { return getToken(quizParser.NAME, 0); }
		public TerminalNode NEWLINE() { return getToken(quizParser.NEWLINE, 0); }
		public CreateGroupContext(AddContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof quizListener ) ((quizListener)listener).enterCreateGroup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof quizListener ) ((quizListener)listener).exitCreateGroup(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof quizVisitor ) return ((quizVisitor<? extends T>)visitor).visitCreateGroup(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AddAllContext extends AddContext {
		public TerminalNode NAME() { return getToken(quizParser.NAME, 0); }
		public TerminalNode NEWLINE() { return getToken(quizParser.NEWLINE, 0); }
		public AddAllContext(AddContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof quizListener ) ((quizListener)listener).enterAddAll(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof quizListener ) ((quizListener)listener).exitAddAll(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof quizVisitor ) return ((quizVisitor<? extends T>)visitor).visitAddAll(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CreateMultiGroupContext extends AddContext {
		public List<TerminalNode> NAME() { return getTokens(quizParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(quizParser.NAME, i);
		}
		public TerminalNode NEWLINE() { return getToken(quizParser.NEWLINE, 0); }
		public CreateMultiGroupContext(AddContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof quizListener ) ((quizListener)listener).enterCreateMultiGroup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof quizListener ) ((quizListener)listener).exitCreateMultiGroup(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof quizVisitor ) return ((quizVisitor<? extends T>)visitor).visitCreateMultiGroup(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AddQuestion2GroupContext extends AddContext {
		public Sub_questionContext sub_question() {
			return getRuleContext(Sub_questionContext.class,0);
		}
		public Sub_groupsContext sub_groups() {
			return getRuleContext(Sub_groupsContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(quizParser.NEWLINE, 0); }
		public AddQuestion2GroupContext(AddContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof quizListener ) ((quizListener)listener).enterAddQuestion2Group(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof quizListener ) ((quizListener)listener).exitAddQuestion2Group(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof quizVisitor ) return ((quizVisitor<? extends T>)visitor).visitAddQuestion2Group(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AddContext add() throws RecognitionException {
		AddContext _localctx = new AddContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_add);
		int _la;
		try {
			setState(170);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new CreateGroupContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(139);
				match(T__7);
				setState(140);
				match(NAME);
				setState(141);
				match(NEWLINE);
				}
				break;
			case 2:
				_localctx = new CreateMultiGroupContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(142);
				match(T__7);
				setState(143);
				match(NAME);
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__8) {
					{
					{
					setState(144);
					match(T__8);
					setState(145);
					match(NAME);
					}
					}
					setState(150);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(151);
				match(NEWLINE);
				}
				break;
			case 3:
				_localctx = new AddOptionContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(152);
				match(T__9);
				setState(153);
				match(NAME);
				setState(154);
				match(T__10);
				setState(155);
				sub_question();
				setState(156);
				match(NEWLINE);
				}
				break;
			case 4:
				_localctx = new AddAllContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(158);
				match(T__9);
				setState(159);
				match(NAME);
				setState(160);
				match(T__10);
				setState(161);
				match(T__11);
				setState(162);
				match(NEWLINE);
				}
				break;
			case 5:
				_localctx = new AddQuestion2GroupContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(163);
				match(T__9);
				setState(164);
				sub_question();
				setState(165);
				match(T__10);
				setState(166);
				match(T__12);
				setState(167);
				sub_groups();
				setState(168);
				match(NEWLINE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sub_questionContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(quizParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(quizParser.NAME, i);
		}
		public Sub_questionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sub_question; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof quizListener ) ((quizListener)listener).enterSub_question(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof quizListener ) ((quizListener)listener).exitSub_question(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof quizVisitor ) return ((quizVisitor<? extends T>)visitor).visitSub_question(this);
			else return visitor.visitChildren(this);
		}
	}
